testdata/baselines/reference/submodule/conformance/instantiateTemplateTagTypeParameterOnVariableStatement.errors.txt
instantiateTemplateTagTypeParameterOnVariableStatement.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
instantiateTemplateTagTypeParameterOnVariableStatement.js(4,14): error TS8010: Type annotations can only be used in TypeScript files.
instantiateTemplateTagTypeParameterOnVariableStatement.js(6,12): error TS8004: Type parameter declarations can only be used in TypeScript files.
instantiateTemplateTagTypeParameterOnVariableStatement.js(11,12): error TS8010: Type annotations can only be used in TypeScript files.


==== instantiateTemplateTagTypeParameterOnVariableStatement.js (4 errors) ====
    /**
     * @template T
     * @param {T} a
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @returns {(b: T) => T}
                 ~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    const seq = a => b => b;
               ~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    const text1 = "hello";
    const text2 = "world";
    
    /** @type {string} */
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var text3 = seq(text1)(text2);
    